corrected invisible loading font - minor speed improvement

--- a/scss/type.scss
+++ b/scss/type.scss
@@ -3,6 +3,7 @@
   src: url('/fonts/Plain-Medium.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,10 +11,11 @@
   src: url('/fonts/Plain-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
-  font-family: 'Plain', 'Helvetica', sans-serif;
+  font-family: 'Arial', sans-serif;
 }
 
 .super {
@@ -64,7 +66,7 @@ h1 {
 h2 {
   display: block;
   font-weight: normal;
-  font-family: 'Plain';
+  // font-family: 'Plain';
   font-size: 2rem;
   line-height: 1;
   letter-spacing: -0.01em;
@@ -83,7 +85,7 @@ h2 {
 h3 {
   display: block;
   font-weight: normal;
-  font-family: 'Plain';
+  // font-family: 'Plain';
   font-size: 1.25rem;
   line-height: 1.25;
   letter-spacing: -0.01em;
@@ -102,7 +104,7 @@ h3 {
 p {
   display: block;
   font-weight: normal;
-  font-family: 'Plain';
+  // font-family: 'Plain';
   font-size: 1rem;
   line-height: 1.25;
 
@@ -112,13 +114,13 @@ p {
 }
 
 .mini {
-  font-family: 'Plain';
+  // font-family: 'Plain';
   font-size: 1rem;
   line-height: 1.25;
 }
 
 .tiny {
-  font-family: 'Plain';
+  // font-family: 'Plain';
   font-size: 0.75rem;
   line-height: 1;
   // opacity: 0.6;
